--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,29 +37,61 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const limabelas = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <1600));
+    console.table(limabelas);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const namaLengkap = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.log(namaLengkap);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const urutan = inventors.sort((a, b) => a.year > b.year ? 1:-1);
+    console.table(urutan);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalTahun = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalTahun);
 
     // 5. Sort the inventors by years lived
+    const tertua = inventors.sort(function(a,b){
+      const oldInventor = a.passed - a.year;
+      const youngInventor = b.passed - b.year;
+      return oldInventor > youngInventor ? -1 : 1;
+    });
+    console.table(tertua);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
+
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const namaAkhir = people.sort((terakhir,selanjutnya) => {
+      const [aLast, aFirst] = terakhir.split (', ');
+      const [bLast, bFirst] = selanjutnya.split(', ');
+      return aLast > bLast ? 1:-1;
+    });
+    console.log(namaAkhir);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const transport = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const kendaraan = transport.reduce
+    (function(obj, item){
+      if(!obj[item]){
+        obj[item]=0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+    console.log(kendaraan);
   </script>
 </body>
 </html>
